@@ -288,12 +288,11 @@ sub publish {
     my $body        = delete $args{body}      || '';
     my $return_cb   = delete $args{on_return} || sub {};
 
-    $self->_publish(
-        %args,
-    )->_header(
-        $header_args, $body,
-    )->_body(
-        $body,
+    $self->{connection}->_push_bulk_write(
+        $self->{id},
+        $self->_publish(%args),
+        $self->_header($header_args, $body),
+        $self->_body($body),
     );
 
     return $self if !$args{mandatory} && !$args{immediate};
@@ -309,59 +308,50 @@ sub _publish {
     my $self = shift;
     my %args = @_;
 
-    $self->{connection}->_push_write(
-        Net::AMQP::Protocol::Basic::Publish->new(
-            exchange  => '',
-            mandatory => 0,
-            immediate => 0,
-            %args, # routing_key
-            ticket    => 0,
-        ),
-        $self->{id},
+    my $frame = Net::AMQP::Protocol::Basic::Publish->new(
+        exchange  => '',
+        mandatory => 0,
+        immediate => 0,
+        %args, # routing_key
+        ticket    => 0,
     );
 
-    return $self;
+    return $frame;
 }
 
 sub _header {
     my ($self, $args, $body,) = @_;
 
-    $self->{connection}->_push_write(
-        Net::AMQP::Frame::Header->new(
-            weight       => $args->{weight} || 0,
-            body_size    => length($body),
-            header_frame => Net::AMQP::Protocol::Basic::ContentHeader->new(
-                content_type     => 'application/octet-stream',
-                content_encoding => undef,
-                headers          => {},
-                delivery_mode    => 1,
-                priority         => 1,
-                correlation_id   => undef,
-                expiration       => undef,
-                message_id       => undef,
-                timestamp        => time,
-                type             => undef,
-                user_id          => $self->{connection}->login_user,
-                app_id           => undef,
-                cluster_id       => undef,
-                %$args,
-            ),
+    my $frame = Net::AMQP::Frame::Header->new(
+        weight       => $args->{weight} || 0,
+        body_size    => length($body),
+        header_frame => Net::AMQP::Protocol::Basic::ContentHeader->new(
+            content_type     => 'application/octet-stream',
+            content_encoding => undef,
+            headers          => {},
+            delivery_mode    => 1,
+            priority         => 1,
+            correlation_id   => undef,
+            expiration       => undef,
+            message_id       => undef,
+            timestamp        => time,
+            type             => undef,
+            user_id          => $self->{connection}->login_user,
+            app_id           => undef,
+            cluster_id       => undef,
+            %$args,
         ),
-        $self->{id},
     );
 
-    return $self;
+    return $frame;
 }
 
 sub _body {
     my ($self, $body,) = @_;
 
-    $self->{connection}->_push_write(
-        Net::AMQP::Frame::Body->new(payload => $body),
-        $self->{id},
-    );
+    my $frame = Net::AMQP::Frame::Body->new( payload => $body );
 
-    return $self;
+    return $frame;
 }
 
 sub consume {
